<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:padding="10dp"
    tools:context=".fragments.AddFoodFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="15dp">

            <ImageView
                android:id="@+id/favorites_add_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:padding="6dp"
                android:src="@drawable/ic_favorite_border_black_24dp" />

            <TextView
                android:id="@+id/tv_name_food_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_toStartOf="@id/favorites_add_iv"
                android:text="@string/milk_dessert"
                android:textColor="@color/colorPrimaryText"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/tv_value_por_food_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_name_food_add"
                android:layout_marginTop="15dp"
                android:text="@string/serving_size"
                android:textColor="@color/colorSecondaryText"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/et_value_por_food_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/tv_value_por_food_add"
                android:layout_toStartOf="@+id/tv_measure_food_add"
                android:padding="5dp"
                android:text="@string/_100"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryText"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_measure_food_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/et_value_por_food_add"
                android:layout_alignParentEnd="true"
                android:text="@string/g"
                android:textColor="@color/colorPrimaryText"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/number_of_servings_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_value_por_food_add"
                android:layout_marginTop="15dp"
                android:text="@string/number_of_servings"
                android:textColor="@color/colorSecondaryText"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/number_of_servings_et"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/number_of_servings_tv"
                android:layout_alignParentEnd="true"
                android:inputType="number"
                android:maxLength="4"
                android:padding="8dp"
                android:text="@string/_1"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryText"
                android:textSize="17sp" />

            <LinearLayout
                android:id="@+id/content_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/number_of_servings_tv"
                android:layout_marginTop="15dp"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_cabs_food_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/_1_0"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/carbs_g"
                        android:textColor="@color/colorSecondaryText" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_fat_food_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/_17_0"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/fat_g"
                        android:textColor="@color/colorSecondaryText" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_protein_food_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/_17_0"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/protein_g"
                        android:textColor="@color/colorSecondaryText" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_calories_food_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/_247"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/calories"
                        android:textColor="@color/colorSecondaryText" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/add_food_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/content_layout"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:text="@string/add_food_btn"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryText" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>
