<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:focusableInTouchMode="true"
    android:clickable="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.roshk1n.foodcalculator.activities.ResetPasswordActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#d0ff00"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:text="@string/forgot_your_password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/mdtp_white"
            android:textSize="15sp"
            android:text="@string/reset_hint" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/StyledTilEditText"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/email_reset_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:textColor="@drawable/edit_text_sing_up_state" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/reset_password_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#d0ff00"
        android:text="@string/reset_password1"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/back_login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="15sp"
        android:textColor="@color/colorAccentLogin"
        android:text="@string/back_to_login"/>

</LinearLayout>
